k8s/istio/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simpleapi-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleapi
spec:
  hosts:
  - "api"
  gateways:
  - simpleapi-gateway 
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: simpleapi.api.svc.cluster.local #{servicename}.{namespace}.svc.cluster.local 
        port:
          number: 80
